created some new divisions

--- a/Web-Test/index.xhtml
+++ b/Web-Test/index.xhtml
@@ -1,37 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Revelations Web Test</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
-    <img src="https://g.christianbook.com/dg/product/cbd/f400/160341.jpg" alt="bible cover" />
-    <div id="navTabs">
-        <button>Home</button>
-        <button>About</button>
-        <button>Corpus</button>
-        <button>Analysis</button>
-        <button>Conclusion</button>
-    </div>
-    <div class="center">
-        <p id="home">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium adipisci dolore, labore
-            exercitationem qui inventore eligendi possimus quasi odio, facere officiis sit delectus atque consequuntur
-            distinctio? Exercitationem magni molestias tempore, iste blanditiis autem quo deleniti eius obcaecati
-            nesciunt voluptatibus quis voluptatem nostrum optio reprehenderit accusantium! Aliquam dolores inventore,
-            nemo illum quidem iure, debitis voluptas non, exercitationem eaque consequuntur obcaecati itaque
-            voluptatibus vero magni unde ipsam nostrum! Laudantium debitis cumque nesciunt dolorum inventore autem
-            libero harum repudiandae quis voluptates maxime assumenda quae soluta alias facere perspiciatis, corporis
-            nisi illo enim repellat, veniam error asperiores labore officiis? Tempora labore quisquam, repudiandae
-            voluptatibus fuga quasi mollitia quibusdam eaque ea dicta asperiores, dolorum doloremque maxime, sapiente
-            numquam magnam perspiciatis tenetur quam voluptate dolorem voluptatem? Eius voluptate unde enim ut eos aut
-            ea quidem dolor illum nemo nesciunt, tempore placeat recusandae veritatis architecto velit quibusdam
-            repellat animi! Et, explicabo corporis! Sequi alias minima numquam dignissimos?</p>
-        <p id="about">ABOUT</p>
-        <p id="corpus">CORPUS</p>
-        <p id="analysis">ANALYSIS</p>
-        <p id="conclusion">CONCLUSION</p>
-    </div>
-    <script src="nav.js"></script>
-</body>
+    <head>
+        <title>Revelations Web Test</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body>
+        <div id="flex-container">
+            <div id="content">
+                <img src="https://g.christianbook.com/dg/product/cbd/f400/160341.jpg"
+                    alt="bible cover" />
+                <div id="pages">
+                    <section id="home">
+                        <h1>HOME</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
+                            adipisci dolore, labore exercitationem qui inventore eligendi possimus
+                            quasi odio, facere officiis sit delectus atque consequuntur distinctio?
+                            Exercitationem magni molestias tempore, iste blanditiis autem quo
+                            deleniti eius obcaecati nesciunt voluptatibus quis voluptatem nostrum
+                            optio reprehenderit accusantium! Aliquam dolores inventore, nemo illum
+                            quidem iure, debitis voluptas non, exercitationem eaque consequuntur
+                            obcaecati itaque voluptatibus vero magni unde ipsam nostrum! Laudantium
+                            debitis cumque nesciunt dolorum inventore autem libero harum repudiandae
+                            quis voluptates maxime assumenda quae soluta alias facere perspiciatis,
+                            corporis nisi illo enim repellat, veniam error asperiores labore
+                            officiis? Tempora labore quisquam, repudiandae voluptatibus fuga quasi
+                            mollitia quibusdam eaque ea dicta asperiores, dolorum doloremque maxime,
+                            sapiente numquam magnam perspiciatis tenetur quam voluptate dolorem
+                            voluptatem? Eius voluptate unde enim ut eos aut ea quidem dolor illum
+                            nemo nesciunt, tempore placeat recusandae veritatis architecto velit
+                            quibusdam repellat animi! Et, explicabo corporis! Sequi alias minima
+                            numquam dignissimos?</p>
+                    </section>
+                    <section id="about">
+                        <h1>ABOUT</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt omnis
+                            molestias sequi architecto repudiandae autem distinctio eaque. Iure
+                            nesciunt repudiandae odit! Architecto recusandae dicta explicabo aliquam
+                            facilis commodi porro possimus consequatur reprehenderit laborum
+                            voluptatum ullam distinctio! Iusto reprehenderit adipisci quasi
+                            molestias aliquid architecto suscipit dolorum dolorem accusamus nesciunt
+                            ipsum dolores officia veritatis quae quibusdam assumenda perferendis ab
+                            rem pariatur possimus. Minima commodi atque dolor officiis enim culpa
+                            quia facere voluptatum earum quae esse temporibus! Mollitia tempora
+                            omnis neque sunt amet quisquam debitis corporis sit aliquam voluptatum
+                            hic commodi delectus temporibus perferendis voluptate soluta quibusdam
+                            voluptates aliquid quam suscipit voluptas ullam ipsa autem totam quod.
+                            Pariatur iure nesciunt ullam eligendi provident. Excepturi provident
+                            amet totam doloremque enim sapiente mollitia rerum velit incidunt est
+                            nam consectetur! Natus accusantium aliquid repellat veniam facere
+                            consectetur reiciendis explicabo mollitia sint quos incidunt aliquam
+                            perferendis! Ea pariatur beatae sequi illum ratione alias nemo non
+                            magnam atque?</p>
+                    </section>
+                    <section id="corpus">
+                        <h1>CORPUS</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                            deserunt tempore aut recusandae suscipit fugit amet similique harum quam
+                            ea aspernatur quasi explicabo tempora qui modi velit totam inventore quo
+                            minus tenetur labore provident cum impedit eligendi possimus iusto
+                            magnam. Repudiandae eaque dolorem id ullam labore minus recusandae!
+                            Dolorem amet consequatur ex sequi voluptatibus veniam ab iusto illo
+                            similique totam a facilis adipisci cumque numquam tenetur sint libero
+                            maxime possimus ipsa eveniet. Reiciendis sint illo assumenda molestiae
+                            veritatis ad earum magni maxime obcaecati? Quae quos modi consequatur
+                            soluta cumque corrupti nemo dolorum sequi nostrum a laboriosam laborum
+                            id quisquam iusto nobis eius natus vitae fugit tenetur consequuntur
+                            totam quibusdam ullam enim velit voluptate maiores placeat ex veniam
+                            praesentium similique! Iure error eligendi repellendus voluptas mollitia
+                            non impedit optio numquam nam hic quas accusamus soluta eos ab ipsam
+                            atque iusto neque molestias voluptatum deserunt itaque officiis unde
+                            sunt obcaecati laboriosam consectetur!</p>
+                    </section>
+                    <section id="analysis">
+                        <h1>ANALYSIS</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
+                            molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
+                            minus itaque beatae nemo dolore earum optio quidem perspiciatis aperiam
+                            rerum facilis. Cupiditate optio sapiente molestias quae non eaque saepe
+                            molestiae facilis placeat amet consequatur veritatis dolor itaque.
+                            Labore laborum ut odio iste ipsam dolores delectus voluptate maxime
+                            officiis repellendus sit minus vero eos ducimus adipisci quia expedita
+                            incidunt corporis vitae id beatae praesentium fugiat impedit ullam ad
+                            nulla sunt. Iure cupiditate eum accusantium eaque nulla dicta sunt culpa
+                            maiores adipisci enim optio delectus dolorem laboriosam quas quo quis
+                            aperiam commodi quae corporis doloremque natus cumque obcaecati soluta
+                            neque aliquid suscipit deserunt voluptatibus saepe voluptate magni
+                            tenetur non perferendis animi iste unde voluptatem vero ipsa ex magnam
+                            laborum? Obcaecati quam quidem facilis similique reiciendis odio nemo
+                            aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
+                            impedit illum. Magnam laudantium.</p>
+                    </section>
+                    <section id="conclusion">
+                        <h1>CONCLUSION</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
+                            earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
+                            reprehenderit quo mollitia delectus aliquam aperiam illo quod
+                            architecto? Soluta omnis culpa alias deserunt laborum atque ullam aut
+                            architecto eius nostrum minima repellat autem dolor amet similique sit
+                            vitae impedit reiciendis rem odit tempora ex quasi veniam tempore quod
+                            expedita iusto a sequi nihil iste molestias dolore quibusdam distinctio
+                            vel dolorum obcaecati facere itaque laudantium ducimus incidunt magnam
+                            laboriosam nisi quisquam earum quidem quam. Assumenda alias quaerat
+                            velit quidem similique deleniti vitae et possimus quasi ex incidunt
+                            fugit sequi iure doloribus rerum ipsa enim ipsam saepe architecto ut.
+                            Laudantium corporis cum iure culpa mollitia fuga magnam omnis
+                            voluptatibus suscipit provident in dolore laborum expedita quasi ullam
+                            officiis distinctio vel voluptatum inventore iusto perferendis ipsa
+                            facere accusamus rem eum id voluptate obcaecati! Quos quisquam explicabo
+                            voluptatibus modi illum fugiat laboriosam magni reprehenderit.</p>
+                    </section>
+                </div>
+            </div>
+            <div id="nav-tabs">
+                <button>Home</button>
+                <button>About</button>
+                <button>Corpus</button>
+                <button>Analysis</button>
+                <button>Conclusion</button>
+            </div>
+        </div>
+        <script src="nav.js"></script>
+    </body>
 </html>
