--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -29,39 +29,39 @@
                         </ul>
                         <p>Special thanks to our mentor Emily Martin and our professor David Birnbaum for their guidance throughout the course of our project and to reddit user philosowaffle for use of their XML marked-up Bible text.</p>
                     </section>
-                    <img src="resize_open-book-2.jpg"
-                        alt="open bible" />
-                    <section id="about">
-                        <h1>ABOUT</h1>
-                        <h2>OLD AND NEW TESTAMENT</h2>
-                        <p>This project utilizes one book from the Old Testament and one book from the New Testament. The Old Testament consists of the first 46 books of the Christian Bible. This project uses Psalms which is a book of hymns and laments to God. The New Testament consists of 27 books and is the second half of the Christian Bible. This project uses the Book of Revelation, which is the final book of the New Testament. It outlines an apocalyptic prophecy.</p>
-                        <h3>METHODOLOGY</h3>
-                        <p>Our methodology involves tags with both elements and attributes, if you would like a more explicit understanding of what specifically we chose to tag and why, you can refer to our markup guidelines on our GitHub. We will be tagging words and phrases seen throughout the books of Revelations and Psalms in the Bible. The phrases and words that will be tagged will be specific to those that deal with emotional language. An example of this would be something like the phrase, "God, you have rejected us." </p>
-                        <p>The emotions that are listed as attributes are:</p>
-                        <ul>
-                            <li>joy</li>
-                            <li>sorrow</li>
-                            <li>anger</li>
-                            <li>contentment</li>
-                            <li>fear</li>
-                        </ul>
-                        <p>The tones that are listed as attributes are:</p>
-                        <ul>
-                            <li>pleading</li>
-                            <li>petitioning</li>
-                            <li>violence</li>
-                            <li>boasting</li>
-                            <li>anxiety</li>
-                            <li>praise</li>
-                            <li>fear</li>
-                            <li>righteousness</li>
-                        </ul>
-                        <h4>SOURCES AND LINKS</h4>
-                        <ul>
-                            <li><a href="https://github.com/jeh253/Revelations-and-Psalms">GitHub</a></li>
-                        </ul>
-                    </section>
-                    <section id="corpus">
+                   <img src="resize_open-book-2.jpg"
+                                alt="bible cover" />
+                       <section id="about">
+                            <h1>ABOUT</h1>
+                            <h2>OLD AND NEW TESTAMENT</h2>
+                            <p>This project utilizes one book from the Old Testament and one book from the New Testament. The Old Testament consists of the first 46 books of the Christian Bible. This project uses Psalms which is a book of hymns and laments to God. The New Testament consists of 27 books and is the second half of the Christian Bible. This project uses the Book of Revelation, which is the final book of the New Testament. It outlines an apocalyptic prophecy.</p>
+                            <h3>METHODOLOGY</h3>
+                            <p>Our methodology involves tags with both elements and attributes, if you would like a more explicit understanding of what specifically we chose to tag and why, you can refer to our markup guidelines on our GitHub. We will be tagging words and phrases seen throughout the books of Revelations and Psalms in the Bible. The phrases and words that will be tagged will be specific to those that deal with emotional language. An example of this would be something like the phrase, "God, you have rejected us." </p>
+                            <p>The emotions that are listed as attributes are:</p>
+                            <ul>
+                                <li>joy</li>
+                                <li>sorrow</li>
+                                <li>anger</li>
+                                <li>contentment</li>
+                                <li>fear</li>
+                            </ul>
+                            <p>The tones that are listed as attributes are:</p>
+                            <ul>
+                                <li>pleading</li>
+                                <li>petitioning</li>
+                                <li>violence</li>
+                                <li>boasting</li>
+                                <li>anxiety</li>
+                                <li>praise</li>
+                                <li>fear</li>
+                                <li>righteousness</li>
+                            </ul>
+                            <h4>SOURCES AND LINKS</h4>
+                            <ul>
+                                <li><a href="https://github.com/jeh253/Revelations-and-Psalms">GitHub</a></li>
+                            </ul>
+                       </section>
+                       <section id="corpus">
                         <h1>CORPUS</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                             deserunt tempore aut recusandae suscipit fugit amet similique harum quam
@@ -79,8 +79,8 @@
                             non impedit optio numquam nam hic quas accusamus soluta eos ab ipsam
                             atque iusto neque molestias voluptatum deserunt itaque officiis unde
                             sunt obcaecati laboriosam consectetur!</p>
-                    </section>
-                    <section id="analysis">
+                       </section>
+                       <section id="analysis">
                         <h1>ANALYSIS</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
                             molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
@@ -98,10 +98,10 @@
                             laborum? Obcaecati quam quidem facilis similique reiciendis odio nemo
                             aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
                             impedit illum. Magnam laudantium.</p>
-                    </section>
-                    <img src="resize_back-cover-2.jpg"
-                        alt="bible back cover" />
-                    <section id="conclusion">
+                       </section>
+                    <img src="resize_front-cover-2.jpg"
+                                       alt="bible cover" />
+                        <section id="conclusion">
                         <h1>CONCLUSION</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
                             earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
@@ -119,7 +119,8 @@
                             officiis distinctio vel voluptatum inventore iusto perferendis ipsa
                             facere accusamus rem eum id voluptate obcaecati! Quos quisquam explicabo
                             voluptatibus modi illum fugiat laboriosam magni reprehenderit.</p>
-                    </section>
+                        </section>
+                    </div>
                 </div>
             </div>
             <div id="nav-tabs">
@@ -129,7 +130,6 @@
                 <button>Analysis</button>
                 <button>Conclusion</button>
             </div>
-        </div>
         <script src="nav.js"></script>
     </body>
 </html>
