--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -81,8 +81,8 @@
                             sunt obcaecati laboriosam consectetur!</p>
                        </section>
                        <section id="analysis">
-                        <h1>ANALYSIS</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
+                       <h1>ANALYSIS</h1>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
                             molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
                             minus itaque beatae nemo dolore earum optio quidem perspiciatis aperiam
                             rerum facilis. Cupiditate optio sapiente molestias quae non eaque saepe
@@ -99,7 +99,7 @@
                             aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
                             impedit illum. Magnam laudantium.</p>
                        </section>
-                    <img src="resize_front-cover-2.jpg"
+                    <img src="resize_back-cover-2.jpg"
                                        alt="bible cover" />
                         <section id="conclusion">
                         <h1>CONCLUSION</h1>
