--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -38,7 +38,7 @@
                             Birnbaum for their guidance throughout the course of our project and to
                             reddit user philosowaffle for use of their XML marked-up Bible text.</p>
                     </section>
-                <img src="resize_open-book-2.jpg" alt="bible cover" />
+                <img src="resize_open-book-2.jpg" alt="open bible" />
                 <section id="about">
                     <h1>ABOUT</h1>
                     <h2>OLD AND NEW TESTAMENT</h2>
@@ -121,7 +121,7 @@
                         aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
                         impedit illum. Magnam laudantium.</p>
                 </section>
-                <img src="resize_back-cover-2.jpg" alt="bible cover" />
+                <img src="resize_back-cover-2.jpg" alt="bible back cover" />
                 <section id="conclusion">
                     <h1>CONCLUSION</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
