--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,10 +6,10 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <div id="flex-container">
-            <div id="content">
+        <div id="flex-container-home">
+            <div id="content-home">
                 <img src="resize_front-cover-2.jpg" alt="bible cover" />
-                <div id="pages">
+                <div id="pages-home">
                     <section id="home">
                         <h1>HOME</h1>
                         <h2>OVERVIEW</h2>
@@ -38,71 +38,77 @@
                             Birnbaum for their guidance throughout the course of our project and to
                             reddit user philosowaffle for use of their XML marked-up Bible text.</p>
                     </section>
-                <img src="resize_open-book-2.jpg" alt="open bible" />
-                <section id="about">
-                    <h1>ABOUT</h1>
-                    <h2>OLD AND NEW TESTAMENT</h2>
-                    <p>This project utilizes one book from the Old Testament and one book from
-                        the New Testament. The Old Testament consists of the first 46 books of
-                        the Christian Bible. This project uses Psalms which is a book of hymns
-                        and laments to God. The New Testament consists of 27 books and is the
-                        second half of the Christian Bible. This project uses the Book of
-                        Revelation, which is the final book of the New Testament. It outlines an
-                        apocalyptic prophecy.</p>
-                    <h3>METHODOLOGY</h3>
-                    <p>Our methodology involves tags with both elements and attributes, if you
-                        would like a more explicit understanding of what specifically we chose
-                        to tag and why, you can refer to our markup guidelines on our GitHub. We
-                        will be tagging words and phrases seen throughout the books of
-                        Revelations and Psalms in the Bible. The phrases and words that will be
-                        tagged will be specific to those that deal with emotional language. An
-                        example of this would be something like the phrase, "God, you have
-                        rejected us." </p>
-                    <p>The emotions that are listed as attributes are:</p>
-                    <ul>
-                        <li>joy</li>
-                        <li>sorrow</li>
-                        <li>anger</li>
-                        <li>contentment</li>
-                        <li>fear</li>
-                    </ul>
-                    <p>The tones that are listed as attributes are:</p>
-                    <ul>
-                        <li>pleading</li>
-                        <li>petitioning</li>
-                        <li>violence</li>
-                        <li>boasting</li>
-                        <li>anxiety</li>
-                        <li>praise</li>
-                        <li>fear</li>
-                        <li>righteousness</li>
-                    </ul>
-                    <h4>SOURCES AND LINKS</h4>
-                    <ul>
-                        <li><a href="https://github.com/jeh253/Revelations-and-Psalms"
-                                >GitHub</a></li>
-                    </ul>
-                </section>
-                <section id="corpus">
-                    <h1>CORPUS</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-                        deserunt tempore aut recusandae suscipit fugit amet similique harum quam
-                        ea aspernatur quasi explicabo tempora qui modi velit totam inventore quo
-                        minus tenetur labore provident cum impedit eligendi possimus iusto
-                        magnam. Repudiandae eaque dolorem id ullam labore minus recusandae!
-                        Dolorem amet consequatur ex sequi voluptatibus veniam ab iusto illo
-                        similique totam a facilis adipisci cumque numquam tenetur sint libero
-                        maxime possimus ipsa eveniet. Reiciendis sint illo assumenda molestiae
-                        veritatis ad earum magni maxime obcaecati? Quae quos modi consequatur
-                        soluta cumque corrupti nemo dolorum sequi nostrum a laboriosam laborum
-                        id quisquam iusto nobis eius natus vitae fugit tenetur consequuntur
-                        totam quibusdam ullam enim velit voluptate maiores placeat ex veniam
-                        praesentium similique! Iure error eligendi repellendus voluptas mollitia
-                        non impedit optio numquam nam hic quas accusamus soluta eos ab ipsam
-                        atque iusto neque molestias voluptatum deserunt itaque officiis unde
-                        sunt obcaecati laboriosam consectetur!</p>
-                </section>
-                <section id="analysis">
+                </div>
+            </div>
+        </div>
+            <div id="flex-container-open">
+                <div id="content-open">
+                    <img src="resize_open-book-2.jpg" alt="open bible" />
+                    <div id="pages-open">
+                        <section id="about">
+                            <h1>ABOUT</h1>
+                            <h2>OLD AND NEW TESTAMENT</h2>
+                            <p>This project utilizes one book from the Old Testament and one book from
+                                the New Testament. The Old Testament consists of the first 46 books of
+                                the Christian Bible. This project uses Psalms which is a book of hymns
+                                and laments to God. The New Testament consists of 27 books and is the
+                                second half of the Christian Bible. This project uses the Book of
+                                Revelation, which is the final book of the New Testament. It outlines an
+                                apocalyptic prophecy.</p>
+                            <h3>METHODOLOGY</h3>
+                            <p>Our methodology involves tags with both elements and attributes, if you
+                                would like a more explicit understanding of what specifically we chose
+                                to tag and why, you can refer to our markup guidelines on our GitHub. We
+                                will be tagging words and phrases seen throughout the books of
+                                Revelations and Psalms in the Bible. The phrases and words that will be
+                                tagged will be specific to those that deal with emotional language. An
+                                example of this would be something like the phrase, "God, you have
+                                rejected us." </p>
+                            <p>The emotions that are listed as attributes are:</p>
+                            <ul>
+                                <li>joy</li>
+                                <li>sorrow</li>
+                                <li>anger</li>
+                                <li>contentment</li>
+                                <li>fear</li>
+                            </ul>
+                            <p>The tones that are listed as attributes are:</p>
+                            <ul>
+                                <li>pleading</li>
+                                <li>petitioning</li>
+                                <li>violence</li>
+                                <li>boasting</li>
+                                <li>anxiety</li>
+                                <li>praise</li>
+                                <li>fear</li>
+                                <li>righteousness</li>
+                            </ul>
+                            <h4>SOURCES AND LINKS</h4>
+                            <ul>
+                                <li><a href="https://github.com/jeh253/Revelations-and-Psalms"
+                                        >GitHub</a></li>
+                            </ul>
+                        </section>
+                        <section id="corpus">
+                            <h1>CORPUS</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                                deserunt tempore aut recusandae suscipit fugit amet similique harum quam
+                                ea aspernatur quasi explicabo tempora qui modi velit totam inventore quo
+                                minus tenetur labore provident cum impedit eligendi possimus iusto
+                                magnam. Repudiandae eaque dolorem id ullam labore minus recusandae!
+                                Dolorem amet consequatur ex sequi voluptatibus veniam ab iusto illo
+                                similique totam a facilis adipisci cumque numquam tenetur sint libero
+                                maxime possimus ipsa eveniet. Reiciendis sint illo assumenda molestiae
+                                veritatis ad earum magni maxime obcaecati? Quae quos modi consequatur
+                                soluta cumque corrupti nemo dolorum sequi nostrum a laboriosam laborum
+                                id quisquam iusto nobis eius natus vitae fugit tenetur consequuntur
+                                totam quibusdam ullam enim velit voluptate maiores placeat ex veniam
+                                praesentium similique! Iure error eligendi repellendus voluptas mollitia
+                                non impedit optio numquam nam hic quas accusamus soluta eos ab ipsam
+                                atque iusto neque molestias voluptatum deserunt itaque officiis unde
+                                sunt obcaecati laboriosam consectetur!</p>
+                        </section>
+                        <section id="analysis">
                     <h1>ANALYSIS</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
                         molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
@@ -121,8 +127,14 @@
                         aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
                         impedit illum. Magnam laudantium.</p>
                 </section>
+                    </div>
+                </div>
+            </div>
+        <div id="flex-container-back">
+            <div id="content-back">
                 <img src="resize_back-cover-2.jpg" alt="bible back cover" />
-                <section id="conclusion">
+                <div id="pages-back">
+                    <section id="conclusion">
                     <h1>CONCLUSION</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
                         earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
