changed index to add id to image element

--- a/Web-Test/index.xhtml
+++ b/Web-Test/index.xhtml
@@ -9,7 +9,7 @@
         <div id="flex-container">
             <div id="content">
                 <img src="https://g.christianbook.com/dg/product/cbd/f400/160341.jpg"
-                    alt="bible cover" />
+                    alt="bible cover" id="img"/>
                 <div id="pages">
                     <section id="home">
                         <h1>HOME</h1>
