--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -51,5 +51,6 @@
                     <li><a href="https://github.com/jeh253/Revelations-and-Psalms"
                         >GitHub</a></li>
                 </ul>
+        </div>
     </body>
 </html>
