--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,34 +9,30 @@
         <!--#include virtual="menu.xhtml" -->
         <div id="home">
             <img src="resize_front-cover-2.jpg" alt="bible cover" />
-                <h1>HOME</h1>
-                <h2>OVERVIEW</h2>
-                <p>This project analyzes and categorizes the emotional language in the
-                    Bibical books of Psalms and Revelations. The types of emotional language
-                    present in both of these books are then compared in order to assess the
-                    difference in tone between the Old and New Testaments.</p>
-                <p>Our research questions:</p>
-                <ul>
-                    <li>What is the emotional tone and language of the book of Psalms and
-                        the book of Revelations?</li>
-                    <li>Is there any variation from the Old Testament to the New
-                        Testament?</li>
-                </ul>
-                <h3>ABOUT THE DEVELOPERS</h3>
-                <p>This project was developed in the spring 2022 semester for Computational
-                    Methods in the Digital Humanities course at the University of
-                    Pittsburgh. The team consisted of Feral Holt, Caelin Grambau, Frances
-                    Harrington and a project mentor.</p>
-                <ul>
-                    <li>Feral Holt is a major in Religious Studies</li>
-                    <li>Caelin Grambau is a major in English Writing and Spanish</li>
-                    <li>Frances Harrington is a major in Classics and Linguistics</li>
-                </ul>
-                <p>Special thanks to our mentor Emily Martin and our professor David
-                    Birnbaum for their guidance throughout the course of our project and to
-                    reddit user philosowaffle for use of their XML marked-up Bible text.</p>
+            <h1>HOME</h1>
+            <h2>OVERVIEW</h2>
+            <p>This project analyzes and categorizes the emotional language in the Bibical books of
+                Psalms and Revelations. The types of emotional language present in both of these
+                books are then compared in order to assess the difference in tone between the Old
+                and New Testaments.</p>
+            <p>Our research questions:</p>
+            <ul>
+                <li>What is the emotional tone and language of the book of Psalms and the book of
+                    Revelations?</li>
+                <li>Is there any variation from the Old Testament to the New Testament?</li>
+            </ul>
+            <h3>ABOUT THE DEVELOPERS</h3>
+            <p>This project was developed in the spring 2022 semester for Computational Methods in
+                the Digital Humanities course at the University of Pittsburgh. The team consisted of
+                Feral Holt, Caelin Grambau, Frances Harrington and a project mentor.</p>
+            <ul>
+                <li>Feral Holt is a major in Religious Studies</li>
+                <li>Caelin Grambau is a major in English Writing and Spanish</li>
+                <li>Frances Harrington is a major in Classics and Linguistics</li>
+            </ul>
+            <p>Special thanks to our mentor Emily Martin and our professor David Birnbaum for their
+                guidance throughout the course of our project and to reddit user philosowaffle for
+                use of their XML marked-up Bible text.</p>
         </div>
     </body>
 </html>
-
-
