--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -7,8 +7,7 @@
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
-        <div id="about">
-            <img src="resize_open-book-2.jpg" alt="open bible" />
+        <div id="about" class="open">
                 <h1>ABOUT</h1>
                 <h2>OLD AND NEW TESTAMENT</h2>
                 <p>This project utilizes one book from the Old Testament and one book from
