--- a/web/analysis.xhtml
+++ b/web/analysis.xhtml
@@ -7,8 +7,7 @@
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
-        <div id="analysis">
-            <img src="resize_open-book-2.jpg" alt="open bible" />
+        <div id="analysis" class="open">
             <h1>ANALYSIS</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
                 molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
