--- a/web/conclusion.xhtml
+++ b/web/conclusion.xhtml
@@ -7,8 +7,7 @@
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
-        <div id="conclusion">
-            <img src="resize_back-cover-2.jpg" alt="bible back cover" />
+        <div id="conclusion" class="closed">
             <h1>CONCLUSION</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
                 earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
