--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -7,8 +7,8 @@
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
-        <div id="corpus">
-            <img src="resize_open-book-2.jpg" alt="open bible" />
+        <div id="corpus" class="open">
+          
             <h1>CORPUS</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt
                 tempore aut recusandae suscipit fugit amet similique harum quam ea aspernatur quasi
