--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,8 +7,7 @@
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
-        <div id="home">
-            <img src="resize_front-cover-2.jpg" alt="bible cover" />
+        <div id="home" class="cover">           
             <h1>HOME</h1>
             <h2>OVERVIEW</h2>
             <p>This project analyzes and categorizes the emotional language in the Bibical books of
