--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -1,4 +1,4 @@
 <hr/>
-    <p><a href="index.xhtml">Home</a> | <a href="about.xhtml">About</a> | 
+    <p class="menu"><a href="index.xhtml">Home</a> | <a href="about.xhtml">About</a> | 
         <a href="corpus.xhtml">Corpus</a> | <a href="analysis.xhtml">Analysis</a>| <a href="conclusion.xhtml">Conclusion</a></p>
 <hr/>
