--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
    <head>
+      <link rel="stylesheet" type="text/css" href="style.css"/>
       <title>Psalms</title>
       <title>Revelations</title>
    </head>
