Fixed web title

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Revelations Web Test</title>
+        <title>Psalms and Revelations</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
