--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -4,8 +4,8 @@
       <title>Psalms</title>
       <title>Revelations</title>
    </head>
-   <body>
-      <div class="text open">
+   <body class="open">
+      <div class="text">
          <p> Not sure where to start? You can explore the corpus by clicking on any
             individual tone or emotion, or you can combine them to see where they
             overlap! If you would like to look at one specific book in particular, check
