--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
    <head>
       <link rel="stylesheet" type="text/css" href="style.css"/>
-      <title>Psalms</title>
-      <title>Revelations</title>
+      <title>Psalms and Revelations</title>
+      
    </head>
-   <body class="open">
+   <body>
+      <section class="open">
       <div class="text">
          <p> Not sure where to start? You can explore the corpus by clicking on any
             individual tone or emotion, or you can combine them to see where they
@@ -4851,5 +4852,6 @@
             			21. <span class="joy" class2="praise petitioning" class3="color">The grace of the Lord Jesus Christ be with all the saints.</span>
             				Amen.
             		</p>
-      </div><script scr="colorcode.js"></script></body>
+      </div><script scr="colorcode.js"></script>
+   </section></body>
 </html>
