--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
    <head>
       <link rel="stylesheet" type="text/css" href="style.css"/>
-      <title>Psalms</title>
-      <title>Revelations</title>
+      <title>Psalms and Revelations</title>
    </head>
    <body>
       <section class="sidebar">
@@ -33,6 +32,8 @@
                <h3 class="sidebar-header">Tone</h3><input type="checkbox" id="pleading" name="pleading" checked="checked" class="color"/><label for="pleading">Pleading</label><br/><input type="checkbox" id="petitioning" name="petitioning" checked="checked" class="color"/><label for="petitioning">Petitioning</label><br/><input type="checkbox" id="violence" name="violence" checked="checked" class="color"/><label for="violence">Violence</label><br/><input type="checkbox" id="boasting" name="boasting" checked="checked" class="color"/><label for="boasting">Boasting</label><br/><input type="checkbox" id="anxiety" name="anxiety" checked="checked" class="color"/><label for="anxiety">Anxiety</label><br/><input type="checkbox" id="praise" name="praise" checked="checked" class="color"/><label for="praise">Praise</label><br/><input type="checkbox" id="fear2" name="fear2" checked="checked" class="color"/><label for="fear2">Fear</label><br/><input type="checkbox" id="righteousness" name="righteousness" checked="checked" class="color"/><label for="righteousness">Righteousness</label><br/></div>
          </div>
       </section>
+      <p xmlns="http://www.w3.org/1999/xhtml" class="menu"><a href="index.xhtml">Home</a> | <a href="about.xhtml">About</a> | 
+         <a href="corpus.xhtml">Corpus</a> | <a href="analysis.xhtml">Analysis</a>| <a href="conclusion.xhtml">Conclusion</a></p>
       <div class="corpus">
          <h1>Psalms</h1>
          <h1>Revelations</h1>
