proper books with titles and javascript name

--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -27,7 +27,7 @@
          <div class="attributes-filtering-box">
             <h2 class="sidebar-header">I want to look at:</h2>
             <div class="attributes-filtering-container">
-               <h3 class="sidebar-header">Emotion</h3><input type="checkbox" id="joy" name="joy" checked="checked" class="color"/><label for="joy">Joy</label><br/><input type="checkbox" id="sorrow" name="sorrow" checked="checked" class="color"/><label for="sorrow">Sorrow</label><br/><input type="checkbox" id="anger" name="anger" checked="checked" class="color"/><label for="anger">Anger</label><br/><input type="checkbox" id="contentment" name="contentment" checked="checked" class="color"/><label for="contentment">Contentment</label><br/><input type="checkbox" id="fear" name="fear" checked="checked" class="color"/><label for="fear">Fear</label><br/></div>
+               <h3 class="sidebar-header">Emotion</h3><input type="checkbox" id="joy" name="joy" checked="unchecked" class="color"/><label for="joy">Joy</label><br/><input type="checkbox" id="sorrow" name="sorrow" checked="checked" class="color"/><label for="sorrow">Sorrow</label><br/><input type="checkbox" id="anger" name="anger" checked="checked" class="color"/><label for="anger">Anger</label><br/><input type="checkbox" id="contentment" name="contentment" checked="checked" class="color"/><label for="contentment">Contentment</label><br/><input type="checkbox" id="fear" name="fear" checked="checked" class="color"/><label for="fear">Fear</label><br/></div>
             <div class="attributes-filtering-container">
                <h3 class="sidebar-header">Tone</h3><input type="checkbox" id="pleading" name="pleading" checked="checked" class="color"/><label for="pleading">Pleading</label><br/><input type="checkbox" id="petitioning" name="petitioning" checked="checked" class="color"/><label for="petitioning">Petitioning</label><br/><input type="checkbox" id="violence" name="violence" checked="checked" class="color"/><label for="violence">Violence</label><br/><input type="checkbox" id="boasting" name="boasting" checked="checked" class="color"/><label for="boasting">Boasting</label><br/><input type="checkbox" id="anxiety" name="anxiety" checked="checked" class="color"/><label for="anxiety">Anxiety</label><br/><input type="checkbox" id="praise" name="praise" checked="checked" class="color"/><label for="praise">Praise</label><br/><input type="checkbox" id="fear2" name="fear2" checked="checked" class="color"/><label for="fear2">Fear</label><br/><input type="checkbox" id="righteousness" name="righteousness" checked="checked" class="color"/><label for="righteousness">Righteousness</label><br/></div>
          </div>
@@ -7721,5 +7721,5 @@
                   				Amen.</div>
                		</div>
          </div>
-      </div><script scr="colorcode.js"></script></body>
+      </div><script scr="filter.js"></script></body>
 </html>
