scr to src for javascript in corpus page and .xsl

--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -7721,5 +7721,5 @@
                   				Amen.</div>
                		</div>
          </div>
-      </div><script scr="filter.js"></script></body>
+      </div><script src="filter.js"></script></body>
 </html>
