--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -3,7 +3,7 @@
       <link rel="stylesheet" type="text/css" href="style.css"/>
       <title>Psalms and Revelations</title>
    </head>
-   <body id="analysis" class="open">
+   <body>
       <section class="sidebar">
          <div class="text">
             <p> Not sure where to start? You can explore the corpus by clicking on any
@@ -32,7 +32,7 @@
                <h3 class="sidebar-header">Tone</h3><input type="checkbox" id="pleading" name="pleading" class="color"/><label for="pleading">Pleading</label><br/><input type="checkbox" id="petitioning" name="petitioning" class="color"/><label for="petitioning">Petitioning</label><br/><input type="checkbox" id="violence" name="violence" class="color"/><label for="violence">Violence</label><br/><input type="checkbox" id="boasting" name="boasting" class="color"/><label for="boasting">Boasting</label><br/><input type="checkbox" id="anxiety" name="anxiety" class="color"/><label for="anxiety">Anxiety</label><br/><input type="checkbox" id="praise" name="praise" class="color"/><label for="praise">Praise</label><br/><input type="checkbox" id="fear2" name="fear2" class="color"/><label for="fear2">Fear</label><br/><input type="checkbox" id="righteousness" name="righteousness" class="color"/><label for="righteousness">Righteousness</label><br/></div>
          </div>
       </section>
-      <div class="corpus">
+      <div class="corpus open">
          <h1>Psalms</h1>
          <h2>Chapter: 1</h2>
          <div class="chapter"> 
