--- a/web/analysis.xhtml
+++ b/web/analysis.xhtml
@@ -1,30 +1,128 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Revelations Web Test</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <!--#include virtual="menu.xhtml" -->
-        <div id="analysis" class="open">
-            <h1>ANALYSIS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quod
-                molestiae tenetur voluptatum quibusdam placeat at harum vero quis ipsa
-                minus itaque beatae nemo dolore earum optio quidem perspiciatis aperiam
-                rerum facilis. Cupiditate optio sapiente molestias quae non eaque saepe
-                molestiae facilis placeat amet consequatur veritatis dolor itaque.
-                Labore laborum ut odio iste ipsam dolores delectus voluptate maxime
-                officiis repellendus sit minus vero eos ducimus adipisci quia expedita
-                incidunt corporis vitae id beatae praesentium fugiat impedit ullam ad
-                nulla sunt. Iure cupiditate eum accusantium eaque nulla dicta sunt culpa
-                maiores adipisci enim optio delectus dolorem laboriosam quas quo quis
-                aperiam commodi quae corporis doloremque natus cumque obcaecati soluta
-                neque aliquid suscipit deserunt voluptatibus saepe voluptate magni
-                tenetur non perferendis animi iste unde voluptatem vero ipsa ex magnam
-                laborum? Obcaecati quam quidem facilis similique reiciendis odio nemo
-                aliquid eum odit voluptatum quisquam quae dolorem alias provident ad
-                impedit illum. Magnam laudantium.</p>
-        </div>
-    </body>
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css"/>
+      <title>Psalms and Revelations</title>
+   </head>
+   <body><!--#include virtual="menu.xhtml"-->
+      <div id="analysis" class="open">
+         <h1>Psalms</h1>
+         <table>
+            <tr>
+               <th>Emotions/Tones</th>
+               <th>Count</th>
+            </tr>
+            <tr>
+               <td>Anger</td>
+               <td>2327</td>
+            </tr>
+            <tr>
+               <td>Joy</td>
+               <td>2327</td>
+            </tr>
+            <tr>
+               <td>Contentment</td>
+               <td>2327</td>
+            </tr>
+            <tr>
+               <td>Sorrow</td>
+               <td>2327</td>
+            </tr>
+            <tr>
+               <td>Fear</td>
+               <td>2327</td>
+            </tr>
+            <tr>
+               <td>Petitioning</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Pleading</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Violence</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Boasting</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Anxiety</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Praise</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Fear (tone)</td>
+               <td>2330</td>
+            </tr>
+            <tr>
+               <td>Righteousness</td>
+               <td>2330</td>
+            </tr>
+         </table>
+         <h1>Revelations</h1>
+         <table>
+            <tr>
+               <th>Emotions/Tones</th>
+               <th>Count</th>
+            </tr>
+            <tr>
+               <td>Anger</td>
+               <td>194</td>
+            </tr>
+            <tr>
+               <td>Joy</td>
+               <td>194</td>
+            </tr>
+            <tr>
+               <td>Contentment</td>
+               <td>194</td>
+            </tr>
+            <tr>
+               <td>Sorrow</td>
+               <td>194</td>
+            </tr>
+            <tr>
+               <td>Fear</td>
+               <td>194</td>
+            </tr>
+            <tr>
+               <td>Petitioning</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Pleading</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Violence</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Boasting</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Anxiety</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Praise</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Fear (tone)</td>
+               <td>192</td>
+            </tr>
+            <tr>
+               <td>Righteousness</td>
+               <td>192</td>
+            </tr>
+         </table>
+      </div>
+   </body>
 </html>
