table header added

--- a/web/analysis.xhtml
+++ b/web/analysis.xhtml
@@ -8,7 +8,7 @@
          <h1>Psalms</h1>
          <table>
             <tr>
-               <th>Emotions/Tones</th>
+               <th>Emotions</th>
                <th>Count</th>
             </tr>
             <tr>
@@ -30,6 +30,10 @@
             <tr>
                <td>Fear</td>
                <td>358</td>
+            </tr>
+            <tr>
+               <th>Tones</th>
+               <th>Count</th>
             </tr>
             <tr>
                <td>Petitioning</td>
@@ -67,7 +71,7 @@
          <h1>Revelations</h1>
          <table>
             <tr>
-               <th>Emotions/Tones</th>
+               <th>Emotions</th>
                <th>Count</th>
             </tr>
             <tr>
@@ -89,6 +93,10 @@
             <tr>
                <td>Fear</td>
                <td>5</td>
+            </tr>
+            <tr>
+               <th>Tones</th>
+               <th>Count</th>
             </tr>
             <tr>
                <td>Petitioning</td>
