all-caps headings changed

--- a/web/conclusion.xhtml
+++ b/web/conclusion.xhtml
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Revelations Web Test</title>
+        <title>Psalms and Revelations</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
         <div id="conclusion" class="closed">
-            <h1>CONCLUSION</h1>
+            <h1>Conclusion</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
                 earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
                 reprehenderit quo mollitia delectus aliquam aperiam illo quod
