--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,8 +8,8 @@
     <body>
         <!--#include virtual="menu.xhtml" -->
         <div id="home" class="cover">           
-            <h1>HOME</h1>
-            <h2>OVERVIEW</h2>
+            <h1>Home</h1>
+            <h2>Overview</h2>
             <p>This project analyzes and categorizes the emotional language in the Bibical books of
                 Psalms and Revelations. The types of emotional language present in both of these
                 books are then compared in order to assess the difference in tone between the Old
@@ -20,7 +20,7 @@
                     Revelations?</li>
                 <li>Is there any variation from the Old Testament to the New Testament?</li>
             </ul>
-            <h3>ABOUT THE DEVELOPERS</h3>
+            <h3>About the developers</h3>
             <p>This project was developed in the spring 2022 semester for Computational Methods in
                 the Digital Humanities course at the University of Pittsburgh. The team consisted of
                 Feral Holt, Caelin Grambau, Frances Harrington and a project mentor.</p>
