--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Revelations Web Test</title>
+        <title>Psalms and Revelations</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <!--#include virtual="menu.xhtml" -->
         <div id="about" class="open">
-                <h1>ABOUT</h1>
-                <h2>OLD AND NEW TESTAMENT</h2>
+                <h1>About</h1>
+                <h2>Old and New Testament</h2>
                 <p>This project utilizes one book from the Old Testament and one book from
                     the New Testament. The Old Testament consists of the first 46 books of
                     the Christian Bible. This project uses Psalms which is a book of hymns
@@ -17,7 +17,7 @@
                     second half of the Christian Bible. This project uses the Book of
                     Revelation, which is the final book of the New Testament. It outlines an
                     apocalyptic prophecy.</p>
-                <h3>METHODOLOGY</h3>
+                <h3>Methodology</h3>
                 <p>Our methodology involves tags with both elements and attributes, if you
                     would like a more explicit understanding of what specifically we chose
                     to tag and why, you can refer to our markup guidelines on our GitHub. We
@@ -45,7 +45,7 @@
                     <li>fear</li>
                     <li>righteousness</li>
                 </ul>
-                <h3>SOURCES AND LINKS</h3>
+                <h3>Sources and links</h3>
                 <ul>
                     <li><a href="https://github.com/jeh253/Revelations-and-Psalms"
                         >GitHub</a></li>
