edited information box

--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -9,8 +9,7 @@
             <p> Not sure where to start? You can explore the corpus by clicking on any
                individual tone or emotion, or you can combine them to see where they
                overlap! If you would like to look at one specific book in particular,
-               check the box specified “Psalms” or “Revelations”. If you would like to
-               look at the corpus as a whole, check the box labeled “All”. Emotions and
+               check the box specified “Psalms” or “Revelations”. Emotions and
                tones can be checked independently of each other, but for best results,
                they should be checked together. Once checked, emotions will show up as
                color coded text, and tones will be underlined with color. </p>
